# amoc-climate-model

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
amoc/: __init__.py  analysis.py  config.py  data_loader.py  integrators.py  model.py  plotting.py
data/: AMOC_index.nc
notebooks/: AMOC_Modelling.ipynb
scripts/: download_data.py
tests/: test_data_loader.py  test_integrators.py  test_model.py
