[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "amoc-box-model"
version     = "0.1.0"
description = "Stommel-type 3-box thermohaline circulation model of the AMOC with stochastic forcing"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Rita Berrada" },
]
keywords = [
    "AMOC",
    "thermohaline circulation",
    "climate tipping points",
    "ocean modelling",
    "stochastic differential equations",
    "oceanography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "xarray>=2024.1",
    "matplotlib>=3.8",
    "cartopy>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
data = [
    "copernicusmarine",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel",
]

[project.urls]
Homepage   = "https://github.com/rita-berrada/amoc-box-model"
Repository = "https://github.com/rita-berrada/amoc-box-model"
Issues     = "https://github.com/rita-berrada/amoc-box-model/issues"

[tool.setuptools.packages.find]
include = ["amoc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=amoc --cov-report=term-missing -v"
markers   = [
    "requires_data: marks tests that need ocean_obs.nc (deselect in CI)",
]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
